; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/shell32/extr_shlfileop.c_file_has_content.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/shell32/extr_shlfileop.c_file_has_content.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_PATH = common dso_local global i32 0, align 4
@GENERIC_READ = common dso_local global i32 0, align 4
@OPEN_EXISTING = common dso_local global i32 0, align 4
@INVALID_HANDLE_VALUE = common dso_local global i64 0, align 8
@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64*, i64*)* @file_has_content to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @file_has_content(i64* %0, i64* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64*, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  store i64* %0, i64** %4, align 8
  store i64* %1, i64** %5, align 8
  %11 = load i32, i32* @MAX_PATH, align 4
  %12 = zext i32 %11 to i64
  %13 = call i8* @llvm.stacksave()
  store i8* %13, i8** %6, align 8
  %14 = alloca i64, i64 %12, align 16
  store i64 %12, i64* %7, align 8
  %15 = load i64*, i64** %4, align 8
  %16 = load i32, i32* @GENERIC_READ, align 4
  %17 = load i32, i32* @OPEN_EXISTING, align 4
  %18 = call i64 @CreateFileA(i64* %15, i32 %16, i32 0, i32* null, i32 %17, i32 0, i32* null)
  store i64 %18, i64* %8, align 8
  %19 = load i64, i64* %8, align 8
  %20 = load i64, i64* @INVALID_HANDLE_VALUE, align 8
  %21 = icmp eq i64 %19, %20
  br i1 %21, label %22, label %24

22:                                               ; preds = %2
  %23 = load i32, i32* @FALSE, align 4
  store i32 %23, i32* %3, align 4
  store i32 1, i32* %10, align 4
  br label %37

24:                                               ; preds = %2
  %25 = load i64, i64* %8, align 8
  %26 = load i32, i32* @MAX_PATH, align 4
  %27 = sub nsw i32 %26, 1
  %28 = call i32 @ReadFile(i64 %25, i64* %14, i32 %27, i64* %9, i32* null)
  %29 = load i64, i64* %9, align 8
  %30 = getelementptr inbounds i64, i64* %14, i64 %29
  store i64 0, i64* %30, align 8
  %31 = load i64, i64* %8, align 8
  %32 = call i32 @CloseHandle(i64 %31)
  %33 = load i64*, i64** %5, align 8
  %34 = call i64 @strcmp(i64* %14, i64* %33)
  %35 = icmp eq i64 %34, 0
  %36 = zext i1 %35 to i32
  store i32 %36, i32* %3, align 4
  store i32 1, i32* %10, align 4
  br label %37

37:                                               ; preds = %24, %22
  %38 = load i8*, i8** %6, align 8
  call void @llvm.stackrestore(i8* %38)
  %39 = load i32, i32* %3, align 4
  ret i32 %39
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i64 @CreateFileA(i64*, i32, i32, i32*, i32, i32, i32*) #2

declare dso_local i32 @ReadFile(i64, i64*, i32, i64*, i32*) #2

declare dso_local i32 @CloseHandle(i64) #2

declare dso_local i64 @strcmp(i64*, i64*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
